--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <header><h1>Battleship</h1></header>
+    <div class="container"></div>
+  </body>
 </html>
