--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <header><h1>Battleship</h1></header>
-    <div class="container"></div>
+    <div class="container">
+      <p class="message"></p>
+    </div>
   </body>
 </html>
