feat: add player turn UI

--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <header><h1>Battleship</h1></header>
-    <div class="container">
-      <p class="message"></p>
-    </div>
+    <main>
+      <div class="container">
+        <p class="action-message"></p>
+        <p class="turn-message"></p>
+      </div>
+    </main>
   </body>
 </html>
