feat: add button UI

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,10 @@
     <title>Battleship</title>
   </head>
   <body>
-    <header><h1>Battleship</h1></header>
+    <header>
+      <h1>Battleship</h1>
+      <button>Random Ships</button>
+    </header>
     <main>
       <div class="container">
         <p class="action-message"></p>
